Fixed long word wrapping, improved input

--- a/source/App.css
+++ b/source/App.css
@@ -83,6 +83,7 @@ input
 .clipboard-text
 {
 	padding:0ex 1ex;
+	word-wrap: break-word;
 }
 
 .error
